--- a/mensaje.html
+++ b/mensaje.html
@@ -94,9 +94,9 @@
         <p>
             Fuiste asignado al grupo <strong>%grupo%</strong>, te esperamos el <strong>%dia%</strong> de 
             <strong>%mes%</strong> del <strong>%anio%</strong> en el salón <strong>%salon% </strong> a 
-            las <strong>%hora%</strong> horas con tu comprobante de registro para que apliques tu examen de 
-            conocimientos previos. <strong>Es importante tu asistencia.</strong> Te recomendamos presentarte 
-            con 15 minutos de antelación.
+            la(s) <strong>%hora%</strong> con tu comprobante de registro para que apliques tu examen de 
+            conocimientos previos. <strong style="color: #0b6c9d;">Es importante tu asistencia.</strong> 
+            Te recomendamos presentarte con 15 minutos de antelación.
         </p>
         <br>
         <div class="pieMensaje">
