--- a/registroCulminado.html
+++ b/registroCulminado.html
@@ -37,15 +37,20 @@
             <span>
                 <div class='console-underscore'>Registro exitoso</div>
             </span>
-            <span>
-                <div class='console-underscore'>Revisa tu correo electrónico</div>
-            </span>
         </div>
         <div class="col text-center mt-4">
             <a href="/../Proyecto WEB/index.html" class="btn btn-success mr-3 mb-3" role="button"><i class="fas fa-arrow-circle-left"></i> Regresar</a>
             <a href="/../Proyecto WEB/recuperar.html" class="btn btn-danger mb-3" role="button">Descargar PDF<i class="fas fa-file-pdf"></i></a>
         </div>
-        
+    </div>
+
+    <!--Escudos-->
+    <div class="container p-4 bg-dark mb-5 mt-5 roundend-0">
+        <div class="row">
+            <div class="col-md-12 ">
+                <p style="text-align: center; font-size: 90%;">Revisa tu correo electrónico, hemos adjuntado tu comprobante de registro ahí. ¡Te esperamos en el horario indicado para que presentes tu examen de conocimientos previos!</p>
+            </div>
+        </div>
     </div>
 
     <!-- Optional JavaScript -->
