--- a/recuperar.html
+++ b/recuperar.html
@@ -31,7 +31,7 @@
     <div class="jumbotron rounded-0 img-jmbo text-center">
         <div class="container"><br>
             <h1>Recuperar PDF</h1>
-            <p>Ingrese su número de boleta para recuperar su PDF</p>
+            <p>Ingrese su CURP para recuperar su PDF</p>
             <!--Botón para regresar-->
             <div class="col text-center mt-4">
                 <a href="/../Proyecto WEB/index.html" class="btn btn-success" role="button"><i class="fas fa-arrow-circle-left"></i> Regresar</a>
@@ -63,10 +63,13 @@
         <!--Formulario Recuperar-->
         <form action="/../Proyecto WEB/php/descargarPDF.php" method="POST" class="needs-validation" autocomplete="off" novalidate>
             <div class="form-group">
-                <label for="boleta">No. de boleta<span class="text-danger">*</span></label>
-                <input type="text" class="form-control" maxlength="10" id="boleta" name="boleta" onkeypress="return valiBoleta(event)" style="text-transform: uppercase;" required>
-                <div class="valid-feedback">¡Válido!</div><div class="invalid-feedback">Proporcione un no. de boleta válido</div>
+                <label for="curp ">CURP<span class="text-danger ">*</span><a href="https://www.gob.mx/curp/" target="_blank"> ¿No conoces tu CURP?</a></label>
+                <input type="text" class="form-control " style="text-transform: uppercase; " id="curp" name="curp" size="18 " maxlength="18 " pattern="^[A-Z]{1}[AEIOU]{1}[A-Z]{2}[0-9]{2}(0[1-9]|1[0-2])(0[1-9]|1[0-9]|2[0-9]|3[0-1])[HM]{1}(AS|BC|BS|CC|CS|CH|CL|CM|DF|DG|GT|GR|HG|JC|MC|MN|MS|NT|NL|OC|PL|QT|QR|SP|SL|SR|TC|TS|TL|VZ|YN|ZS|NE)[B-DF-HJ-NP-TV-Z]{3}[0-9A-Z]{1}[0-9]{1}$"
+                    required autocomplete="off">
+                <div class="valid-feedback ">¡Válido!</div>
+                <div class="invalid-feedback ">Proporcione un CURP válido</div>
             </div>
+
             <input type="submit" class="btn btn-primary btn-lg btn-block mt-4" value="¡Listo!"/>
         </form>
         <small class="d-inline-block text-muted mt-2">Instituto Politécnico Nacional | Escuela Superior de Cómputo | 2021</small>
