--- a/mensaje.html
+++ b/mensaje.html
@@ -92,8 +92,8 @@
         </p>
         <br>
         <p>
-            Fuiste asignado al grupo <strong>%grupo%</strong>, te esperamos el <strong>%dia%</strong> de 
-            <strong>%mes%</strong> del <strong>%anio%</strong> en el salón <strong>%salon% </strong> a 
+            Te asignamos al grupo <strong>%grupo%</strong>, por lo que te esperamos el <strong>%dia%</strong> de 
+            <strong>%mes%</strong> del <strong>%anio%</strong> en el salón <strong>%salon%</strong> a 
             la(s) <strong>%hora%</strong> con tu comprobante de registro para que apliques tu examen de 
             conocimientos previos. <strong style="color: #0b6c9d;">Es importante tu asistencia.</strong> 
             Te recomendamos presentarte con 15 minutos de antelación.
